--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,11 @@ ext {
 	set('springCloudVersion', "2021.0.7")
 }
 
+bootBuildImage {
+	imageName = "${project.name}"
+	environment = ["BP_JVM_VERSION": "17.*"]
+}
+
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-config-server'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
