--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -21,5 +21,9 @@ spec:
       - image: ghcr.io/bladespring/bookshop-config-service:0.0.1
         name: bookshop-config-service
         imagePullPolicy: IfNotPresent
+        lifecycle:
+          preStop:
+            exec:
+              command: ["sh", "-c", "sleep 5"]
         resources: {}
 status: {}
