--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -3,11 +3,53 @@ on: push
 
 env:
   REGISTRY: ghcr.io 
+  IMAGE_NAME: bladespring/bookshop-config-service
+  VERSION: 0.0.1
 
 jobs:
+  build:
+    name: Build and Test
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      security-events: write
+    steps:
+      - name: Checkout source code 
+        uses: actions/checkout@v3
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+          cache: gradle
+      - name: Code vulnerability scanning
+        uses: anchore/scan-action@v3
+        id: scan 
+        with:
+          path: "${{ github.workspace }}"
+          fail-build: false 
+          severity-cutoff: high 
+          acs-report-enable: true 
+      - name: Upload vulnerability report 
+        uses: github/codeql-action/upload-sarif@v2 
+        if: success() || failure()
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}
+      - name: Build, unit tests and integration tests 
+        run: |
+          chmod +x gradlew 
+          ./gradlew build 
+      - name: Validate Kubernetes manifests
+        uses: stefanprodan/kube-tools@v1
+        with:
+          kubectl: 1.24.3
+          kubeval: 0.16.1
+          command: |
+            kubeval --strict -d k8s
   package:
     name: Package and Publish 
     if: ${{ github.ref == 'refs/heads/main' }}
+    needs: [ build ]
     runs-on: ubuntu-22.04
     permissions:
       contents: read 
@@ -23,15 +65,15 @@ jobs:
           java-version: 17
           cache: gradle
       - name: Build container image 
-        id: buildImage 
         run: |
           chmod +x gradlew
-          ./gradlew bootBuildImage 
+          ./gradlew bootBuildImage \
+            --imageName ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
       - name: OCI image vulnerability scanning 
         uses: anchore/scan-action@v3 
         id: scan 
         with: 
-          image: ${{ steps.buildImage.output }}
+          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
           fail-build: false 
           severity-cutoff: high 
           acs-report-enable: true 
@@ -47,6 +89,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish container image 
-        run: docker push ${{ steps.buildImage.output }}
+        run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
 
         
